--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required (VERSION 2.6)
 project(pam_openam)
-add_executable(test src/pam_openam.c src/commons.c)
-target_link_libraries(test curl)
+add_executable(openam_validatetoken src/openam_validatetoken.c src/commons.c)
+target_link_libraries(openam_validatetoken curl)
